grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) => choice(
      $.top_level_shared_tail_function_branch,
      $.top_level_conditional,
      $._top_level_item_base,
      $.conditional_function_definition,
    ),

    function_definition: ($) => functionDefinitionWithBody($, $._function_body),

    _function_definition_signature: ($) => choice(
      $._hook_function_definition_signature,
      $._prefixed_function_definition_signature,
      $._plain_function_definition_signature,
    ),

    _function_body: ($) => functionBodyChoice($, {
      blockRule: $.block,
      conditionalRule: $.block_conditional,
    }),

    macro_invocation_statement: ($) => seq(
      field("name", macroNamedIdentifier($)),
      field("arguments", $.argument_list),
      optional(";"),
    ),

    function_declaration: ($) => seq(
      field("kind", choice("forward", "native")),
      choice(
        functionDeclarationSignatureTail($),
        seq(
          field("name", alias($._function_member_name, $.member_expression)),
          field("parameters", choice($.parameter_list, $.parameter_list_reference)),
        ),
      ),
      optional(seq("=", field("alias", $.identifier))),
      ";",
    ),

    state_classifier: ($) => seq(
      "<",
      optional(commaSep1(choice($.scoped_state_entry, $.state_name))),
      ">",
    ),

    scoped_state_entry: ($) => seq(
      field("scope", $.state_name),
      ":",
      field("state", $.state_name),
    ),

    state_name: ($) => token(choice("default", /[A-Za-z_][A-Za-z0-9_]*/)),

    callback_signature: ($) => seq(
      $._callback_signature_start,
      optional(field("types", choice($.identifier, $.tag_wildcard, $.macro_parameter))),
      ">",
    ),

    _function_name: ($) => choice(
      $.identifier,
      $.at_identifier,
      $.operator_name,
    ),

    _function_named_identifier: ($) => seq(
      field("name", $._function_name),
      optional(field("callback_signature", $.callback_signature)),
    ),

    _callback_named_identifier: ($) => seq(
      field("name", $.identifier),
      optional(field("callback_signature", $.callback_signature)),
    ),

    parameter_list: ($) => seq(
      "(",
      optional($._parameter_list_items),
      ")",
    ),

    _parameter_list_items: ($) => directiveListItems($, {
      item: $._parameter_list_item,
      conditional: $.parameter_conditional,
      conditionalNoComma: $.parameter_conditional_no_comma,
    }),

    parameter_declaration: ($) => seq(
      repeat(choice("const", "stock")),
      optional("&"),
      optional(field("type", choice($.tagged_type, $.tag_set_type))),
      optional("&"),
      $._callback_named_identifier,
      repeat(choice($.dimension, $.fixed_dimension, $.packed_dimension)),
      optional(seq("=", field("default_value", choice($.array_literal, $._expression)))),
    ),

    tag_wildcard: ($) => "_",

    variable_declaration: ($) => choice(
      seq(
        repeat(field("prefix", $.identifier)),
        $._variable_declaration_prefix,
        repeat(field("qualifier_reference", $.declaration_qualifier_reference)),
        $._variable_declarator_list,
        ";",
      ),
      prec(1, seq(
        repeat(field("prefix", $.identifier)),
        $._variable_declaration_prefix,
        repeat(field("qualifier_reference", $.declaration_qualifier_reference)),
        alias($._state_variable_declarator, $.variable_declarator),
        statementTerminator($),
      )),
    ),

    _variable_declaration_prefix: ($) => repeat1(choice(
      $._declaration_qualifier,
      "public",
      "stock",
    )),

    declaration_qualifier_reference: ($) => choice(
      $.identifier,
      $.macro_pasted_identifier,
    ),

    _variable_declarator_list: ($) => directiveListItems($, {
      item: $.variable_declarator,
      conditional: $.variable_declarator_conditional,
      conditionalNoComma: $.variable_declarator_conditional_no_comma,
    }),

    variable_declarator: ($) => choice(
      seq(
        optional(field("type", $.tagged_type)),
        $._callback_named_identifier,
        repeat(choice($.dimension, $.fixed_dimension, $.packed_dimension)),
        optional(seq("=", field("initializer", choice($.array_literal, $._expression)))),
      ),
      seq(
        optional(field("type", $.tagged_type)),
        field("name", $.identifier),
        repeat(choice($.dimension, $.fixed_dimension, $.packed_dimension)),
        field("state", $.state_classifier),
      ),
    ),

    _state_variable_declarator: ($) => seq(
      optional(field("type", $.tagged_type)),
      field("name", $.identifier),
      repeat(choice($.dimension, $.fixed_dimension, $.packed_dimension)),
      field("state", $.state_classifier),
    ),

    enum_declaration: ($) => seq(
      "enum",
      optional(field("name", $.identifier)),
      optional(seq(
        ":",
        optional(field("type", choice($.identifier, $.tag_wildcard))),
      )),
      optional(field("increment", $.enum_increment_clause)),
      "{",
      optional($._enum_entries),
      "}",
      optional(";"),
    ),

    enum_increment_clause: ($) => seq(
      "(",
      field("operator", choice(
        "=",
        "+=",
        "-=",
        "*=",
        "/=",
        "%=",
        "<<=",
        ">>=",
        "&=",
        "|=",
        "^=",
      )),
      field("value", choice($.expression_list, $._expression)),
      ")",
    ),

    _enum_entries: ($) => directiveListItems($, {
      item: $.enum_entry,
      conditional: $.enum_conditional,
      conditionalNoComma: $.enum_conditional_no_comma,
    }),

    enum_entry: ($) => seq(
      optional(field("type", $.tagged_type)),
      $._callback_named_identifier,
      repeat(choice($.dimension, $.fixed_dimension, $.packed_dimension)),
      optional(seq("=", field("value", $._expression))),
    ),

    tagged_type: ($) => seq(
      field("tag", choice($.identifier, $.tag_wildcard)),
      optional(field("callback_signature", $.callback_signature)),
      token.immediate(":"),
    ),

    dimension: ($) => seq("[", "]"),

    fixed_dimension: ($) => seq("[", field("size", choice($.expression_list, $._expression)), "]"),

    packed_dimension: ($) => seq(
      "[",
      field("size", choice($.expression_list, $._expression)),
      field("storage", $.packed_storage),
      "]",
    ),

    packed_storage: ($) => "char",

    block: ($) => seq(
      "{",
      repeat($._block_statement),
      "}",
    ),

    _top_level_conditional_block: ($) => seq(
      "{",
      repeat($._top_level_conditional_block_statement),
      "}",
    ),

    _block_statement: ($) => blockConditionalChoice($, $._block_statement_base),

    _if_header: ($) => seq(
      "if",
      "(",
      field("condition", choice($.expression_list, $._expression)),
      ")",
    ),

    return_statement: ($) => seq(
      "return",
      optional(field("value", choice($.expression_list, $._expression))),
      ";",
    ),

    _unterminated_return_statement: ($) => prec.right(1, seq(
      "return",
      field("value", $._unterminated_return_value),
    )),

    expression_statement: ($) => seq(
      field("expression", choice($.statement_expression_list, $._statement_expression)),
      statementTerminator($),
    ),

    _expression: ($) => choice(
      $._expression_not_binary,
      $.binary_expression,
    ),

    _statement_expression: ($) => choice(
      $._statement_expression_not_binary,
      $.binary_expression,
    ),

    _adjacent_string_atom: ($) => choice(
      $.identifier,
      $.string_literal,
      $.function_reference_expression,
    ),

    adjacent_string_expression: ($) => prec.left(PREC.ADD, choice(
      seq(
        field("left", $.function_reference_expression),
        field("right", $.string_literal),
        repeat(field("right", $._adjacent_string_atom)),
      ),
      seq(
        field("left", $.identifier),
        field("right", $.identifier),
        repeat(field("right", $._adjacent_string_atom)),
      ),
      seq(
        field("left", choice(
          $.identifier,
          $.string_literal,
        )),
        field("right", $.string_literal),
        repeat(field("right", $._adjacent_string_atom)),
      ),
      seq(
        field("left", $.string_literal),
        field("right", choice(
          $.identifier,
          $.function_reference_expression,
        )),
        repeat(field("right", $._adjacent_string_atom)),
      ),
    )),

    function_reference_expression: ($) => prec(PREC.UNARY, seq(
      "#",
      field("argument", $._function_name),
    )),

    _function_member_name: ($) => seq(
      field("object", $.identifier),
      ".",
      field("property", $.identifier),
    ),

    callback_suffix_expression: ($) => prec.left(PREC.CALL, seq(
      field("value", choice(
        $.tagged_expression,
        $.identifier,
        $.member_expression,
        $.call_expression,
        $.subscript_expression,
        $.parenthesized_expression,
        $._literal,
      )),
      field("callback_signature", $.callback_signature),
    )),

    member_expression: ($) => prec.left(PREC.CALL, seq(
      field("object", choice(
        $.identifier,
        $.call_expression,
        $.subscript_expression,
        $.member_expression,
        $.parenthesized_expression,
      )),
      ".",
      field("property", $.identifier),
    )),

    call_expression: ($) => prec.left(PREC.CALL, seq(
      field("function", choice(
        $.identifier,
        $.callback_member_expression,
        $.member_expression,
        $.parenthesized_expression,
        $.subscript_expression,
        $.tagged_expression,
      )),
      field("arguments", $.argument_list),
    )),

    argument_list: ($) => seq(
      "(",
      optional($._argument_list_items),
      ")",
    ),

    _argument_list_items: ($) => directiveListItems($, {
      item: $._argument_list_item,
      conditional: $.argument_conditional,
      conditionalNoComma: $.argument_conditional_no_comma,
    }),

    subscript_expression: ($) => prec.left(PREC.SUBSCRIPT, seq(
      field("array", choice(
        $.identifier,
        $.call_expression,
        $.member_expression,
        $.subscript_expression,
        $.parenthesized_expression,
      )),
      "[",
      field("index", choice($.expression_list, $._expression)),
      "]",
    )),

    tagged_expression: ($) => prec.right(PREC.CAST, seq(
      field("type", $.tagged_type),
      field("value", choice(
        $.tagged_expression,
        $.identifier,
        $.parenthesized_expression,
        $.call_expression,
        $.subscript_expression,
        $.unary_expression,
        $._literal,
      )),
    )),

    parenthesized_expression: ($) => seq(
      "(",
      field("expression", choice($.expression_list, $._expression)),
      ")",
    ),

    array_literal: ($) => seq(
      "{",
      optional($._array_literal_items),
      "}",
    ),

    _array_literal_items: ($) => directiveListItems($, {
      item: $._array_literal_item,
      conditional: $.array_literal_conditional,
      conditionalNoComma: $.array_literal_conditional_no_comma,
    }),

    preproc_define: ($) => choice(
      defineDirective($,
        field("unsupported_header", alias($._unsupported_define_header, $.preproc_text)),
        optional(seq(
          $._macro_value_separator,
          field("value", $.preproc_text),
        )),
      ),
      defineDirective($,
        token.immediate("("),
        token.immediate(/[ \t]+/),
        field("value", $.preproc_text),
      ),
      defineDirective($,
        field("parameters", $.complex_macro_parameter_list),
        optional(seq(
          $._macro_value_separator,
          field("value", $.preproc_text),
        )),
      ),
      defineDirective($,
        field("parameters", $.structured_macro_parameter_list),
        optional(seq(
          $._macro_value_separator,
          field("value", $.preproc_text),
        )),
      ),
      prec.right(1, defineDirective($,
        field("unsupported_parameters", alias($._unsupported_macro_parameter_list, $.preproc_text)),
        field("value", $.preproc_text),
      )),
      prec.right(1, defineDirective($,
        field("parameters", $.macro_parameter_list),
        field("value", $.preproc_text),
      )),
      defineDirective($,
        field("parameters", $.macro_parameter_list),
        optional(seq(
          $._macro_value_separator,
          field("value", defineValue($)),
        )),
      ),
      defineDirective($,
        optional(seq(
          $._macro_value_separator,
          field("value", defineValue($)),
        )),
      ),
    ),

    macro_parameter_list: ($) => seq(
      token.immediate("("),
      commaSep(choice(
        $.macro_parameter,
        $.identifier,
        $.macro_colon_parameter,
      )),
      ")",
    ),

    _macro_value_separator: ($) => token.immediate(/[ \t]+/),

    macro_parameter: ($) => token(seq("%", /[A-Za-z0-9_]+/)),

    preproc_if: ($) => seq(
      preprocessor("if"),
      field("condition", $.preproc_expression),
    ),

    preproc_else: ($) => preprocessor("else"),

    preproc_endif: ($) => preprocessor("endif"),

    preproc_expression: ($) => choice(
      $.preproc_assignment_expression,
      $.preproc_ternary_expression,
      $.preproc_adjacent_string_expression,
      $.preproc_stringify_expression,
      $.preproc_binary_expression,
      $.preproc_unary_expression,
      $.preproc_sizeof_expression,
      $.preproc_call_expression,
      $.preproc_member_expression,
      $.preproc_subscript_expression,
      $.preproc_tagged_expression,
      $.preproc_dollar_expression,
      $.preproc_tag_set,
      $.preproc_parenthesized_expression,
      $.preproc_defined,
      $.operator_symbol,
      $.macro_at_identifier,
      $.macro_pasted_identifier,
      $.macro_parameter,
      $.identifier,
      $.tag_wildcard,
      $.integer_literal,
      $.hex_literal,
      $.float_literal,
      $.string_literal,
      $.char_literal,
      $.boolean_literal,
      $.null_literal,
    ),

    preproc_binary_expression: ($) => binaryExpression($.preproc_expression, [
      ["||", PREC.LOGICAL_OR],
      ["&&", PREC.LOGICAL_AND],
      ["|", PREC.BITWISE_OR],
      ["^", PREC.BITWISE_XOR],
      ["&", PREC.BITWISE_AND],
      ["==", PREC.EQUALITY],
      ["!=", PREC.EQUALITY],
      ["<", PREC.RELATIONAL],
      ["<=", PREC.RELATIONAL],
      [">", PREC.RELATIONAL],
      [">=", PREC.RELATIONAL],
      ["<<", PREC.SHIFT],
      [">>>", PREC.SHIFT],
      [">>", PREC.SHIFT],
      ["+", PREC.ADD],
      ["-", PREC.ADD],
      ["*", PREC.MULTIPLY],
      ["/", PREC.MULTIPLY],
      ["%", PREC.MULTIPLY],
    ]),

    preproc_unary_expression: ($) => prec.left(PREC.UNARY, seq(
      field("operator", choice(...UNARY_OPERATORS)),
      field("argument", $.preproc_expression),
    )),

    preproc_parenthesized_expression: ($) => seq(
      "(",
      optional(field("expression", choice($.preproc_expression_list, $.preproc_expression))),
      optional(","),
      ")",
    ),

    preproc_defined: ($) => choice(
      seq("defined", field("name", $.identifier)),
      seq("defined", "(", field("name", $.identifier), ")"),
    ),

    preproc_text: ($) => token(prec(-1, /([^\\\r\n]|\\\r?\n|\\)+/)),

    _literal: ($) => choice(
      $.integer_literal,
      $.binary_literal,
      $.hex_literal,
      $.float_literal,
      $.string_literal,
      $.char_literal,
      $.boolean_literal,
      $.null_literal,
    ),

    integer_literal: ($) => token(/[0-9][0-9_]*/),

    float_literal: ($) => token(choice(
      /[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9][0-9_]*)?/,
      /[0-9][0-9_]*[eE][+-]?[0-9][0-9_]*/,
    )),

    string_literal: ($) => seq(
      '"',
      repeat(choice($.escape_sequence, token.immediate(prec(1, /[^"\\\r\n]+/)))),
      '"',
    ),

    boolean_literal: ($) => choice("true", "false"),
