test/corpus/declarations.txt
====================
global declarations
====================

new gPlayerCount;
new Float:gSpawnX = 123.5;
new bool:gConnected[MAX_PLAYERS];
const Float:gScale = Float:(1.0);
static const gFlags = 1;
public numHaleKills = 0;
stock Float:gSpawnY = 1.0;
public Float:gPos[3] = { 1.0, 2.0, 3.0 };
Y_PREFIX stock Func:gCallback<> = Func:0<>;
Y_PREFIX stock gPrefixedValue;
static Include_open@mp_directly;
stock const VERSION_STRING[] = #VERSION_MAJOR "." #VERSION_MINOR "." #VERSION_BUILD;
const VERSION_BCD = BCD(VERSION_MAJOR.VERSION_MINOR.VERSION_BUILD);
const SSCANF_STATIC__ SSCANF_OnNPCModeInit = 0;
new lightswitch<green>;
new bool:button_memo<red_wait, green_wait_interim, yellow_wait>
new bool:button_memo2<parser:red_wait, parser:green_wait_interim>

#define PP_SYNTAX_@
#define @ str_new_static
#define @@ str_val
#if defined PP_SYNTAX_@
static Has_at_sign_define;
#endif

forward Float:GetSpawnX(playerid);
native SetPlayerPos(playerid, Float:x, Float:y, Float:z);
native Float:GetVectorLength(Float:x, Float:y) = VectorSize;
FUNC_PAWNDOC(Float:GetSpawnX(playerid));
__COMPILER_TAG_DATA(Vehicle, INVALID_VEHICLE_ID);
__COMPILER_TAG_DATA(T_CP_TYPE, 0)
PP_VARIANT_BIN_OP(+, var_add);
PP_VARIANT_LOG_BIN_OP(==, var_eq);
PP_VARIANT_LOG_UN_OP(!, var_not);

enum PlayerState {
    PLAYER_STATE_NONE,
    PLAYER_STATE_SPAWNED = 2,
    Float:PLAYER_STATE_HEALTH
};

---

(source_file
  (variable_declaration
    (variable_declarator
      name: (identifier)))
  (variable_declaration
    (variable_declarator
      type: (tagged_type
        tag: (identifier))
      name: (identifier)
      initializer: (float_literal)))
  (variable_declaration
    (variable_declarator
      type: (tagged_type
        tag: (identifier))
      name: (identifier)
      (fixed_dimension
        size: (identifier))))
  (variable_declaration
    (variable_declarator
      type: (tagged_type
        tag: (identifier))
      name: (identifier)
      initializer: (tagged_expression
        type: (tagged_type
          tag: (identifier))
        value: (parenthesized_expression
          expression: (float_literal)))))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      initializer: (integer_literal)))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      initializer: (integer_literal)))
  (variable_declaration
    (variable_declarator
      type: (tagged_type
        tag: (identifier))
      name: (identifier)
      initializer: (float_literal)))
  (variable_declaration
    (variable_declarator
      type: (tagged_type
        tag: (identifier))
      name: (identifier)
      (fixed_dimension
        size: (integer_literal))
      initializer: (array_literal
        (float_literal)
        (float_literal)
        (float_literal))))
  (variable_declaration
    prefix: (identifier)
    (variable_declarator
      type: (tagged_type
        tag: (identifier))
      name: (identifier)
      callback_signature: (callback_signature)
      initializer: (callback_suffix_expression
        value: (tagged_expression
          type: (tagged_type
            tag: (identifier))
          value: (integer_literal))
        callback_signature: (callback_signature))))
  (variable_declaration
    prefix: (identifier)
    (variable_declarator
      name: (identifier)))
  (variable_declaration
    (variable_declarator
      name: (identifier)))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (dimension)
      initializer: (adjacent_string_expression
        left: (function_reference_expression
          argument: (identifier))
        right: (string_literal)
        right: (function_reference_expression
          argument: (identifier))
        right: (string_literal)
        right: (function_reference_expression
          argument: (identifier)))))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      initializer: (call_expression
        function: (identifier)
        arguments: (argument_list
          (member_expression
            object: (member_expression
              object: (identifier)
              property: (identifier))
            property: (identifier))))))
  (variable_declaration
    qualifier_reference: (declaration_qualifier_reference
      (identifier))
    (variable_declarator
      name: (identifier)
      initializer: (integer_literal)))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      state: (state_classifier
        (state_name))))
  (variable_declaration
    (variable_declarator
      type: (tagged_type
        tag: (identifier))
      name: (identifier)
      state: (state_classifier
        (state_name)
        (state_name)
        (state_name))))
  (variable_declaration
    (variable_declarator
      type: (tagged_type
        tag: (identifier))
      name: (identifier)
      state: (state_classifier
        (scoped_state_entry
          scope: (state_name)
          state: (state_name))
        (scoped_state_entry
          scope: (state_name)
          state: (state_name)))))
  (preproc_define
    name: (identifier))
  (preproc_define
    name: (define_at_identifier
      (identifier)))
  (preproc_define
    name: (define_at_identifier
      (define_at_identifier
        (identifier))))
  (top_level_conditional
    (preproc_if
      condition: (preproc_expression
        (preproc_defined
          name: (identifier))))
    (variable_declaration
      (variable_declarator
        name: (identifier)))
    (preproc_endif))
  (function_declaration
    return_type: (tagged_type
      tag: (identifier))
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier))))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier))
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier))
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier))
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier))))
  (function_declaration
    return_type: (tagged_type
      tag: (identifier))
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier))
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier)))
    alias: (identifier))
  (macro_invocation_statement
    name: (identifier)
    arguments: (argument_list
      (tagged_expression
        type: (tagged_type
          tag: (identifier))
        value: (call_expression
          function: (identifier)
          arguments: (argument_list
            (identifier))))))
  (macro_invocation_statement
    name: (identifier)
    arguments: (argument_list
      (identifier)
      (identifier)))
  (macro_invocation_statement
    name: (identifier)
    arguments: (argument_list
      (identifier)
      (integer_literal)))
  (macro_invocation_statement
    name: (identifier)
    arguments: (argument_list
      (operator_symbol)
      (identifier)))
  (macro_invocation_statement
    name: (identifier)
    arguments: (argument_list
      (operator_symbol)
      (identifier)))
  (macro_invocation_statement
    name: (identifier)
    arguments: (argument_list
      (operator_symbol)
      (identifier)))
  (enum_declaration
    name: (identifier)
    (enum_entry
      name: (identifier))
    (enum_entry
      name: (identifier)
      value: (integer_literal))
    (enum_entry
      type: (tagged_type
        tag: (identifier))
      name: (identifier))))

================================
enum-tag array dimensions
================================

new HalloweenLocations[][E_HALLOWEEN_DATA] = {
    {1, 2},
    {3, 4}
};

---

(source_file
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (dimension)
      (fixed_dimension
        size: (identifier))
      initializer: (array_literal
        (array_literal
          (integer_literal)
          (integer_literal))
        (array_literal
          (integer_literal)
          (integer_literal))))))

========================================
relational operator overload declarations
========================================

native bool:operator==(Float:oper1, Float:oper2) = float_eq;
native bool:operator!=(Float:oper1, Float:oper2) = float_ne;
native bool:operator>=(Float:oper1, Float:oper2) = float_ge;
native bool:operator<=(Float:oper1, Float:oper2) = float_le;

---

(source_file
  (function_declaration
    return_type: (tagged_type
      tag: (identifier))
    name: (operator_name)
    parameters: (parameter_list
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier))
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier)))
    alias: (identifier))
  (function_declaration
    return_type: (tagged_type
      tag: (identifier))
    name: (operator_name)
    parameters: (parameter_list
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier))
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier)))
    alias: (identifier))
  (function_declaration
    return_type: (tagged_type
      tag: (identifier))
    name: (operator_name)
    parameters: (parameter_list
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier))
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier)))
    alias: (identifier))
  (function_declaration
    return_type: (tagged_type
      tag: (identifier))
    name: (operator_name)
    parameters: (parameter_list
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier))
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier)))
    alias: (identifier)))

========================================
identifier prefix before function syntax
========================================

foo bar();

---

(source_file
  (prefixed_function_declaration
    prefix: (identifier)
    name: (identifier)
    parameters: (parameter_list)))

========================================
identifiers and addition are not declarations
========================================

foo bar + baz;

---

(source_file
  (ERROR
    (identifier)
    (identifier)
    (preproc_text)
    (preproc_text)))

========================================
identifiers and subscripts are not declarations
========================================

foo bar[baz];

---

(source_file
  (ERROR
    (identifier)
    name: (identifier)
    (fixed_dimension
      size: (identifier))))

========================================
identifiers and assignments are not declarations
========================================

foo bar = baz();

---

(source_file
  (ERROR
    (identifier)
    (identifier)
    (preproc_text)))
